--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_camera_snapshot">CameraSnapshot</string>
     <string name="camera_unknown">Unknown Camera</string>
+    <string name="button_retry">Retry</string>
 </resources>
