Login screen form and model
* Issue #2
* Introduce login screen
* Input form
* Server API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_camera_snapshot">CameraSnapshot</string>
     <string name="camera_unknown">Unknown Camera</string>
     <string name="button_retry">Retry</string>
+    <string name="list_empty">List empty</string>
 </resources>
